--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,82 @@
-#ball {
-  width: 50px;
-  height: 50px;
-  border-radius: 50px;
-  background-color: red;
-}/*# sourceMappingURL=main.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  list-style: none;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+
+/* @font-face {
+  font-family: "Montserrat", sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  src: url("../fonts/cantarell_regular-webfont.woff") format("woff"), url("../fonts/cantarell_regular-webfont.woff2") format("woff2");
+} */
+
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 28px;
+  color: #A39E93;
+  margin-bottom: 28px;
+}
+
+p {
+  line-height: 24px;
+  margin-bottom: 28px;
+}
+
+#main-header {
+  background-color: #A39E93;
+  margin-bottom: 28px;
+}
+#main-header #logo {
+  display: block;
+  height: 100px;
+  max-width: 30px;
+  margin-top: 0px;
+  margin-right: auto;
+  margin-left: auto;
+}
+/* #main-header #main-nav {
+  margin-top: 40px;
+} */
+/* #main-header #main-nav ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  padding: 0%;
+  margin-top: 20px;
+}
+#main-header #main-nav ul li {
+  margin-right: 20px;
+}
+#main-header #main-nav ul li:last-child {
+  margin-right: 0px;
+}
+#main-header #main-nav a {
+  color: #030422;
+  text-decoration: none;
+} */
+
+/* @media screen and (min-width: 768px) {
+  #main-header #main-nav ul {
+    justify-content: flex-end;
+  }
+  #logo {
+    margin-left: 8px;
+    margin-right: 8px;
+  }
+}
+#about-us {
+  margin-bottom: 28px;
+}
+
+#founders section {
+  margin-bottom: 40px;
+} */
