--- a/css/grid.css
+++ b/css/grid.css
@@ -30,13 +30,13 @@ body, p, h1, h2, h3, h4, h5 {
 }
 
 .box {
-   background-color: powderblue;
+   background-color: #CECDCD;
    color: rgb(27, 27, 27);
-   border-radius: 5px;
+   border-radius: 0px;
    padding: 20px;
-   text-align: center;
-   margin-top: 10px;
-   margin-bottom:10px;
+   text-align: auto;
+   margin-top: 0px;
+   margin-bottom: 0px;
  }
 
 /* ---Mobile Library Grid Styles--- */
