--- a/css/main.css
+++ b/css/main.css
@@ -29,54 +29,95 @@ h2 {
 p {
   line-height: 24px;
   margin-bottom: 28px;
+  color: #030422;
+  font-size: 25px;
 }
 
 #main-header {
-  background-color: #A39E93;
+  background-color: #030422;
   margin-bottom: 28px;
+  height: 180px;
 }
+
 #main-header #logo {
   display: block;
   height: 100px;
-  max-width: 30px;
-  margin-top: 0px;
+  max-width: 120px;
+  margin-top: auto;
   margin-right: auto;
-  margin-left: auto;
+  margin-left: 10%;
+  padding-top: 15px;
 }
-/* #main-header #main-nav {
-  margin-top: 40px;
-} */
-/* #main-header #main-nav ul {
+
+/* .nav-bar {
+  color: #fff;
+  height: 70px;
   display: flex;
-  list-style: none;
-  justify-content: center;
-  padding: 0%;
-  margin-top: 20px;
+  justify-content: space-between;
+  padding: 0.5rem calc((100vw - 1200px) /2);
+  z-index: 10;
+  position: relative;
 }
-#main-header #main-nav ul li {
-  margin-right: 20px;
-}
-#main-header #main-nav ul li:last-child {
-  margin-right: 0px;
-}
-#main-header #main-nav a {
-  color: #030422;
-  text-decoration: none;
+
+.navbar__bars {
+  font-size: 30px;
 } */
 
-/* @media screen and (min-width: 768px) {
-  #main-header #main-nav ul {
-    justify-content: flex-end;
-  }
-  #logo {
-    margin-left: 8px;
-    margin-right: 8px;
-  }
-}
-#about-us {
-  margin-bottom: 28px;
+#main-header #main-nav {
+  margin-top: 40px;
+} 
+
+#Hero {
+  position: relative;
+  width: 100%;
+  justify-content: space-between;
+  height: 800px;
+  display: flex;
+  align-items: center;
+  background-color: #030422;
+  margin-top: -2%;
 }
 
-#founders section {
-  margin-bottom: 40px;
+#Hero h1 {
+  color: #fff;
+  margin-bottom: 50px;
+  font-size: 70px;
+  font-weight: 700;
+}
+
+#Hero p {
+  color: #fff;
+  margin-bottom: 100px;
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 45px;
+}
+
+.hero__container--left {
+  margin-left: 10%;
+}
+
+
+.hero__container--btn a {
+  font-size: 25px;
+  background-color: #030422;
+  color: #fff;
+  /* border-color: #fff;
+  border: 2px; */
+}
+
+.hero__container--right {
+  margin-right: 10%;
+  width: 30%;
+  height: 90%;
+  color: #030422;
+  font-size: 20px;
+  background-color: #CECDCD;
+  margin-bottom: 5%;
+}
+
+/* .hero__container--img{
+  margin-right: 10%;
+  width: 100%;
+  height: auto;
 } */
