--- a/css/main.css
+++ b/css/main.css
@@ -122,3 +122,42 @@ p {
   width: 100%;
   height: auto;
 } */
+
+#Projects {
+  position: relative;
+  width: 100%;
+  justify-content: space-between;
+  height: 800px;
+  /* display: flex; */
+  align-items: center;
+  margin-top: -2%;
+  margin-bottom: 2%;
+  /* padding-bottom: 5%; */
+}
+
+#Projects h1 {
+  color: #030422;
+  margin-bottom: 30px;
+  font-size: 45px;
+  font-weight: 600;
+}
+
+#Projects p {
+  color: #030422;
+  margin-bottom: 50px;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+.Project-btn a {
+  font-size: 25px;
+  background-color: #fff;
+  color: #030422;
+  margin-bottom: 50px;
+}
+
+#Project1 {
+  display: flex;
+  padding-bottom: 5%;
+}
