--- a/css/main.css
+++ b/css/main.css
@@ -124,13 +124,15 @@ p {
 } */
 
 #Projects {
+  margin-left: 10%;
+  /* margin-right: 10%; */
   position: relative;
   width: 100%;
   justify-content: space-between;
   height: 800px;
   /* display: flex; */
   align-items: center;
-  margin-top: -2%;
+  margin-top: 5%;
   margin-bottom: 2%;
   /* padding-bottom: 5%; */
 }
@@ -157,7 +159,31 @@ p {
   margin-bottom: 50px;
 }
 
+
+.Project-Img {
+  /* margin-right: 10%; */
+  width: 40%;
+  height: 700px;
+  color: #CECDCD;
+  font-size: 20px;
+  background-color: #030422;
+  margin-bottom: 5%;
+}
+
 #Project1 {
   display: flex;
-  padding-bottom: 5%;
+  justify-content: space-between;
+  margin-right: 20%;
+}
+
+#Project2 {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 20%;
+}
+
+#Project3 {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 20%;
 }
